# cpp-parquet

./: .gitignore  CMakeLists.txt
avro-schema/: CMakeLists.txt
cmake/Modules/: GoogleGlogCMakeLists.cmake  ParquetFormatCMakeLists.cmake
examples/: CMakeLists.txt  parquet-file-driver.cc  parquet-file-driver2.cc  pb_sample.cc  pb_sample.fds  pb_sample.pb.cc  pb_sample.pb.h  pb_sample.proto  sample.proto
parquet-file/: CMakeLists.txt  parquet-column.cc  parquet-file-test.cc
parquet-file/util/: bit-stream-utils.h  bit-stream-utils.inline.h  bit-util.h  compress.h  cpu-info.h  rle-encoding.h
parquet-file2/: CMakeLists.txt  compressor.cc  compressor.h  dictionary_encoder.cc  dictionary_encoder.h  parquet_column.cc  parquet_column.h  parquet_file.cc  parquet_file.h  parquet_file_test.cc
protobuf-schema/: .gitignore  CMakeLists.txt  proto2parq.cc  protobuf-parquet-encoder.cc  protobuf-schema-walker.cc  protobuf-schema-walker.h
